fix overflow issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -65,21 +65,24 @@ h2 {
 .hero img {
   height: 100vh;
   width: 100vw;
-  object-fit: cover;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero img {
+    object-fit: cover;
+  }
 }
 
 .city-date-container {
   position: absolute;
   bottom: 300px;
   left: 50px;
-  width: 100%;
 }
 
 @media only screen and (max-width: 767px) {
   .city-date-container {
     position: absolute;
     bottom: 450px;
-    width: 100%;
   }
 }
 
